<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_in_to_access_your_account">sign in to access your account</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_an_account_sign_up_now">Don’t have an account, <b><u><font color="#006B5F">Sign Up</font></u></b></string>
    <string name="or">or</string>
    <string name="already_a_member_log_in">Already a member? <b><u><font color="#006B5F">Log In</font></u></b></string>
    <string name="register">REGISTER</string>
    <string name="show_more"> <u>Show More</u></string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="ingredient">Ingredient</string>
    <string name="instructions">Instructions</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="ingredients">Ingredients</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="plan">Plan</string>
    <string name="meal_of_day">Meal Of Day</string>
    <string name="ingredient_measure">
   %1$s
    <small space=" ">
        <span style="font-weight: bold;">%2$s</span>
    </small>
</string>
    <string name="meals">Meals</string>
    <string name="meals_of_first_item">Meals Of %s</string>
    <string name="search_for_your_meal">Search for your meal</string>
    <string name="cooking_guide">Video</string>
    <string name="skip">As Gust</string>
    <string name="please_log_in_to_access_this_feature">Please log in to access this feature.</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_plan">No plan for This week</string>
    <string name="plan_for_this_week">Plan for this week</string>
    <string name="saturday">Saturday</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="loading_login">Logging in…</string>
    <string name="loading_sign_Up">Create an account...</string>
    <string name="selected_planned_meal">\"Select day For add your meal \"</string>
    <string name="choose_type_of_meal">Choose time of your meal</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string-array name="days_of_week">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="meals_of_day">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>